Converting to Apache-2.0 license.
- Misc refactoring.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "xmlwriter"
     ],
     "homepage": "https://github.com/dcarbone/xml-writer-plus",
-    "license": "GPLv3",
+    "license": "Apache-2.0",
 
     "authors" : [
         {
