--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name" : "dcarbone/xml-writer-plus",
-    "type" : "library",
-    "description" : "Simple XML Writer library for PHP 5.4+",
-
-    "keywords": [
-        "php",
-        "xml",
-        "xmlwriter"
-    ],
-    "homepage": "https://github.com/dcarbone/xml-writer-plus",
-    "license": "Apache-2.0",
-
-    "authors" : [
-        {
-            "name" : "Daniel Carbone",
-            "email" : "daniel.p.carbone@gmail.com"
-        }
-    ],
-
-    "require" : {
-        "php" : ">=5.4.0",
-        "lib-libxml" : "*"
-    },
-    "autoload" : {
-        "psr-4" : {
-            "DCarbone\\" : "src/"
-        }
+  "name": "dcarbone/xml-writer-plus",
+  "type": "library",
+  "description": "Simple XML Writer library for PHP 5.4+",
+  "keywords": [
+    "php",
+    "xml",
+    "xmlwriter"
+  ],
+  "homepage": "https://github.com/dcarbone/xml-writer-plus",
+  "license": "Apache-2.0",
+  "authors": [
+    {
+      "name": "Daniel Carbone",
+      "email": "daniel.p.carbone@gmail.com"
     }
+  ],
+  "require": {
+    "php": ">=5.4.0",
+    "lib-libxml": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "<6.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "DCarbone\\": "src/"
+    }
+  }
 }
